Feature/refactor and fix code smells (#7)
* Added lombok, Fix all the code smells but one

* Commented out failing command

---------

Co-authored-by: Komlan Kodoh <komlankodoh@gmail.com>